# everest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.xlsx
app/: cli.py  config.py  db.py  excel.py  execution.py  logging_utils.py  models.py
app/adapters/: __init__.py  dto.py  exceptions.py  fedresurs.py  kad_arbitr.py
app/domain/: __init__.py  errors.py  schemas.py
app/parsers/: __init__.py  fedresurs.py  kad.py  retrying.py
app/repositories/: __init__.py  lookup_results.py
app/services/: __init__.py  batch.py
tests/: test_adapters.py  test_batch_service.py  test_excel.py  test_parsers.py  test_parsers_integration.py  test_persistence.py  test_retrying_parsers.py
