[project]
name = "everest"
version = "0.1.0"
description = ""
authors = [
    {name = "ro9aine"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
