[project]
name = "everest"
version = "0.1.0"
description = ""
authors = [
    {name = "ro9aine"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
]

[tool.poetry]
packages = [
    {include = "app"},
]

[tool.poetry.scripts]
everest = "app.cli:main"
test-unit = "app.cli:test_unit"
test-integration = "app.cli:test_integration"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
playwright = "^1.51.0"

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real external services",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
